<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <!-- Intro tab -->
        <LinearLayout
            android:id="@+id/tab1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="60dp" >

            <TextView
                android:id="@+id/txt1"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/LS" />

        </LinearLayout>

        <!-- Events tab -->

        <LinearLayout
            android:id="@+id/tab2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>

            <TextView
                android:id="@+id/txt2.1"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/event" />
            <TextView
                android:id="@+id/txt2.2"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/event" />
            <TextView
                android:id="@+id/txt2.3"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/event" />
            <TextView
                android:id="@+id/txt2.4"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/event" />
           
        </LinearLayout>

        <!-- Contacts tab -->
        <LinearLayout
            android:id="@+id/tab3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >

            <TextView
                android:id="@+id/txt3"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/contact" />

            <ImageButton 
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iucover"
                android:scaleType="centerInside" />
            

        </LinearLayout>
        
        <!-- Prayer tab -->

        <LinearLayout
            android:id="@+id/tab4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
            <TextView
                android:id="@+id/txt4.1"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/prayer" />
            <TextView
                android:id="@+id/txt4.2"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/prayer" />

            <TextView
                android:id="@+id/txt4.3"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/prayer" />
        </LinearLayout>
        
        <!-- Verse tab -->
        <LinearLayout
            android:id="@+id/tab5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="60dp" >
            

            <TextView
                android:id="@+id/txt5"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:text="@string/verse" />
        </LinearLayout>
    </FrameLayout>

</TabHost>